refactor:
    - move main out of logic package
    - expose func and var to be used in main
    - fix problem with swagger
    - update readme
